--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^8.8.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
+    "serverless-http": "^3.2.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
